--- a/styles/main.scss
+++ b/styles/main.scss
@@ -52,7 +52,7 @@ a.disabled {
   pointer-events: none;
 }
 
-input, textarea {
+input, textarea, select {
   font-weight: 300 !important;
   border: var(--yc-main-border);
 
